# thereplacebook

./: .dockerignore  .env  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  Database_Table_Structure.csv  Dockerfile  LICENSE  README.md  apprunner.yaml  backup14Mar25.sql  billionairescraper.py  convert_sqlite_to_postgres.py  db.sqlite  dump.sql  full_dump.sql  python_billionaires.py  sampledata  sqlfilegenerator.py  updated50.sql  updates.sql
.github/workflows/: apprunner.yaml  deploy.yaml
.sqlx/: query-2b6d87cc4e35376428a12d72ba8aa6922c37782c5054d74c58f04951e5661871.json  query-671ee871acec9beee4789fffea3426cfe2474d82039ee78b6f4fda43647ff3e1.json  query-aebf0c9fb6898dd66d933919aa6ca4b6a43fbe87bd1ca1b634a3c454453edab7.json
PSQL_scripts/: dump_postgres.sql  schema.sql  update_bills  updated50.sql
examples/: search_demo.html  websocket_client.html
migrations/: 001_create_indexes.sql
src/: errors.rs  features.rs  main.rs  models.rs  updater.rs
src/data_sources/: mod.rs  opencorporates.rs  wikidata.rs  wikipedia.rs
src/realtime/: client_manager.rs  mod.rs  price_feed.rs  wealth_calculator.rs  websocket.rs
src/search/: api.rs  filters.rs  full_text.rs  fuzzy_match.rs  mod.rs
static/: index.html  index2
